syntax = "proto3";

package ms;

import "google/protobuf/field_mask.proto";

enum Order {
    ASC = 0;
    DESC = 1;
}

message CursorIn {
    int64 limit = 1;
    int64 offset = 2;
    string cursor = 3;
}

message CursorOut {
    int64 total_count = 1;
    int64 limit = 2;
    int64 offset = 3;
    bool has_next_page = 4;
    string cursor = 5;
}

service Ms {
    rpc Search (SearchIn) returns (SearchOut) {
    }
    rpc New (NewIn) returns (NewOut) {
    }
}

message SearchIn {
    string query = 1;
    Order order = 2;
    CursorIn cursor = 3;
    google.protobuf.FieldMask projection = 4;
}

message SearchOut {
    repeated int64 id = 1;
    enum Status {
        OK = 0;
        FORBIDDEN = 1;
        NOT_FOUND = 2;
        BAD_REQUEST = 3;
        SERVER_INTERNAL_ERROR = 4;
    }
    Status status = 2;
    CursorOut cursor = 3;
}

message NewIn {
    string name = 1;
}

message NewOut {
    int64 id = 1;
    enum Status {
        OK = 0;
        FORBIDDEN = 1;
        BAD_REQUEST = 2;
        SERVER_INTERNAL_ERROR = 3;
    }
    Status status = 2;
}